--- a/serverless.yml
+++ b/serverless.yml
@@ -112,3 +112,8 @@ functions:
           method: delete
           cors: true
           authorizer: aws_iam
+  resources:
+    # DynamoDB
+    - ${file(resources/dynamodb-table.yml)}
+    # S3
+    - ${file(resources/s3-bucket.yml)}
