--- a/serverless.yml
+++ b/serverless.yml
@@ -120,3 +120,4 @@ functions:
     - ${file(resources/s3-bucket.yml)}
     # Cognito
     - ${file(resources/cognito-user-pool.yml)}
+    - ${file(resources/cognito-identity-pool.yml)}
